# firelight

./: .gitignore  CMakeLists.txt  README.md  dbformat.json  notes.txt
_data/: library.json
_data/_users/biscuitcakes/saves/: 123.save  123312.save  456.save  7868aafa-97a2-4607-81f0-20132c1dbfa7.save  789.save  eff0b6a5-5cbe-4810-8d2a-52d45955c4d2.save
docs/Firelight/: ROM Hacks.md
docs/Firelight/.obsidian/: workspace.json
src/: main.cpp
src/app/: game_screen.cpp  game_screen.hpp  screen_thing.hpp
src/app/controller/: controller_manager.cpp  controller_manager.hpp  controller_type.hpp  sdl_controller.cpp  sdl_controller.hpp  special_mappings.hpp
src/app/db/: game_full_file_thing.hpp  game_record.hpp  game_repository.hpp  game_scanner.cpp  game_scanner.hpp  in_memory_game_repository.cpp  in_memory_game_repository.hpp
src/app/libretro/: core.cpp  core.hpp  game.cpp  gamepad.cpp  gamepad.hpp  input.cpp  video.cpp  video.hpp
src/app/patching/: paper_mario_patch_thing.hpp  pm_star_rod_mod_patch.cpp  pm_star_rod_mod_patch.hpp  pm_star_rod_mod_patcher.hpp  thing.cpp  yay_0_codec.cpp  yay_0_codec.hpp
src/app/saves/: save_manager.cpp  save_manager.hpp
src/controller/: controller_manager.cpp  controller_manager.hpp  controller_mapping.cpp  controller_mapping.hpp
src/gfx/: shaders.cpp  shaders.hpp  stuff.hpp
src/graphics/: character.hpp  driver.hpp  open_gl_driver.cpp  open_gl_driver.hpp  shaders.cpp  stuff.hpp
src/graphics/opengl/: open_gl_driver.cpp  open_gl_driver.hpp  shaders.cpp
src/gui/: character.hpp  context.cpp  context.hpp  event.hpp  open_gl_painter.cpp  open_gl_painter.hpp  point.hpp  rect.hpp  style.cpp  style.hpp  widget_painter.cpp  widget_painter.hpp  widget_state.hpp
src/gui/events/: event.hpp
src/gui/widgets/: button.cpp  button.hpp  frame.cpp  frame.hpp  menu.cpp  menu.hpp  menu_item.cpp  menu_item.hpp  quick_menu.cpp  quick_menu.hpp  text.cpp  text.hpp  widget.cpp  widget.hpp
src/gui/widgets/base/: new_widget.cpp  new_widget.hpp  widget.cpp  widget.hpp
src/lib/graphics/: driver.hpp  texture.hpp
src/lib/graphics/opengl/: open_gl_driver.cpp  open_gl_driver.hpp  open_gl_texture.cpp  open_gl_texture.hpp  shaders.cpp
src/lib/gui/: context.cpp  context.hpp  focusable.hpp  layout_manager.hpp  widget_factory.cpp  widget_factory.hpp
src/lib/gui/screens/: screen.cpp  screen.hpp  screen_manager.cpp  screen_manager.hpp
src/lib/gui/widgets/: button.cpp  button.hpp  container_widget.cpp  container_widget.hpp
src/lib/gui/widgets/base/: widget.cpp  widget.hpp
src/libretro/: audio.cpp  audio.hpp  core.cpp  core.hpp  coreoption.hpp  game.hpp  gamepad.cpp  gamepad.hpp  input.hpp  video.cpp  video.hpp
src/math/: bbox.cpp  bbox.hpp
src/metrics/: gameloop.hpp
src/settings/: user_settings.cpp  user_settings.h
tests/app/patching/: pm_star_rod_mod_patch_test.cpp
